; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/uevent/extr_uevent_filtering.c_wait_for_pid.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/uevent/extr_uevent_filtering.c_wait_for_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@EINTR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wait_for_pid(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  br label %6

6:                                                ; preds = %21, %15, %1
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @waitpid(i32 %7, i32* %4, i32 0)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %17

11:                                               ; preds = %6
  %12 = load i64, i64* @errno, align 8
  %13 = load i64, i64* @EINTR, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  br label %6

16:                                               ; preds = %11
  store i32 -1, i32* %2, align 4
  br label %32

17:                                               ; preds = %6
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %3, align 4
  %20 = icmp ne i32 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %17
  br label %6

22:                                               ; preds = %17
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @WIFEXITED(i32 %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %22
  %27 = load i32, i32* %4, align 4
  %28 = call i64 @WEXITSTATUS(i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %26, %22
  store i32 -1, i32* %2, align 4
  br label %32

31:                                               ; preds = %26
  store i32 0, i32* %2, align 4
  br label %32

32:                                               ; preds = %31, %30, %16
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @waitpid(i32, i32*, i32) #1

declare dso_local i32 @WIFEXITED(i32) #1

declare dso_local i64 @WEXITSTATUS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
